--- a/.github/workflows/Github_Action.yaml
+++ b/.github/workflows/Github_Action.yaml
@@ -14,3 +14,7 @@ jobs:
           api_key_secret: ${{ secrets.TWITTER_API_KEY_SECRET }}
           access_token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           access_token_secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+        
+outputs:
+  title:
+    description: "Post's title"        
